# anthem-1

./: .gitattributes  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  make-release-bundle.sh
.ci/: Dockerfile-arch-latest  Dockerfile-ubuntu-18.04  ci.sh
app/: CMakeLists.txt  main.cpp
examples/: choice-rules.lp  coloring-1.lp  coloring.spec  exact-cover.lp  exact-cover.spec  example-0.lp  example-0.spec  example-1.lp  example-1.spec  example-2-deadlock.spec  example-2.lemmas  example-2.lp  example-2.spec  example-exact-cover.lp  example-exact-cover.spec  example-prime.lemmas  example-prime.lp  example-prime.spec  graph-coloring.lp  hide-circular-dependency.lp  letters.lp  nested-arguments.lp  permutations.lp  prime.lp  propositions.lp  schur-numbers.lp  simple-external-show.lp  simple-external.lp
examples/strong-equivalence/: addition-a.lp  addition-b.lp  multiplication-a.lp  multiplication-b.lp  unsafe-program-a.lp  unsafe-program-b.lp
include/anthem/: AST.h  ASTCopy.h  ASTForward.h  ASTUtils.h  ASTVisitors.h  Arithmetics.h  Body.h  BodyDirect.h  BodyLiteralVisitor.h  ChooseValueInTerm.h  ComparisonOperator.h  Completion.h  Context.h  Domain.h  Equality.h  Evaluation.h  Exception.h  Head.h  HeadDirect.h  HeadLiteralVisitor.h  HeadTranslationMode.h  HiddenPredicateElimination.h  IntegerVariableDetection.h  LiteralVisitor.h  Location.h  MapDomains.h  MapToIntegersPolicy.h  OutputFormat.h  Rule.h  RuleContext.h  Semantics.h  Simplification.h  SimplificationVisitors.h  StatementVisitor.h  Term.h  TermVisitor.h  Translation.h  TranslationMode.h  TranslationTarget.h  Tristate.h  (+3 more)
include/anthem/examine-semantics/: Body.h  Completion.h  Equality.h  Evaluation.h  Head.h  HiddenPredicateElimination.h  IntegerVariableDetection.h  Rule.h  Simplification.h  SimplificationVisitors.h  Translation.h  Type.h  Utils.h
include/anthem/input/: Location.h
include/anthem/output/: AST.h  ClingoOutput.h  ColorStream.h  FormatScope.h  Formatter.h  FormatterHumanReadable.h  FormatterTPTP.h  Formatting.h  Logger.h  NullStream.h  ParenthesisStyle.h  Priority.h  TPTP.h
include/anthem/prove-strong-equivalence/: Body.h  ChooseValueInTerm.h  Head.h
include/anthem/translation-common/: ChooseValueInTerm.h  ComparisonOperator.h  Input.h  Output.h  Rule.h  StatementVisitor.h  Term.h  UnifyDomains.h
include/anthem/verify-properties/: Body.h  Head.h  ReplaceConstants.h  Rule.h  Translation.h  TranslationContext.h
include/anthem/verify-strong-equivalence/: Body.h  ChooseValueInTerm.h  Head.h  MapDomains.h  Rule.h  Translation.h  TranslationContext.h
src/: CMakeLists.txt  ast.rs  commands.rs  error.rs  input.rs  lib.rs  main.rs  output.rs  problem.rs  simplify.rs  specification.rs  traits.rs  translate.rs  utils.rs
src/anthem/: ASTCopy.cpp  ASTUtils.cpp  Completion.cpp  HiddenPredicateElimination.cpp  IntegerVariableDetection.cpp  MapDomains.cpp  Simplification.cpp  Translation.cpp
src/anthem/examine-semantics/: Completion.cpp  HiddenPredicateElimination.cpp  IntegerVariableDetection.cpp  Simplification.cpp  Translation.cpp
src/anthem/output/: ClingoOutput.cpp  Logger.cpp  NullStream.cpp
src/anthem/translation-common/: UnifyDomains.cpp
src/anthem/verify-properties/: Translation.cpp
src/anthem/verify-strong-equivalence/: MapDomains.cpp  Translation.cpp
src/commands/: verify_program.rs  verify_specification.rs
src/input/: specification.rs
src/output/: human_readable.rs  shell.rs  tptp.rs
src/output/tptp/: preamble_axioms.tptp  preamble_types.tptp
src/problem/: proof_direction.rs  section_kind.rs  statement.rs
src/translate/: common.rs  verify_properties.rs
src/translate/common/: choose_value_in_term.rs  operators.rs
src/translate/verify_properties/: context.rs  head_type.rs  translate_body.rs  translate_head.rs
src/utils/: arithmetic_terms.rs  autoname_variables.rs  closures.rs  collect_predicate_declarations.rs  copy_formula.rs  fold_predicates.rs  formula_contains_predicate.rs  output_predicates.rs  variable_declaration_stack.rs  variables_in_terms.rs
tests/: CMakeLists.txt  TestCompletion.cpp  TestHiddenPredicateElimination.cpp  TestIntegerDetection.cpp  TestPlaceholders.cpp  TestSimplification.cpp  TestTranslation.cpp  TestUnsupported.cpp
